fix: /chunks doesn't display head and banner + add: clean-gradle-cache.sh + modify: jvm args for runServer